--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
   "fastapi>=0.115.0",
   "uvicorn[standard]>=0.30.0",
   "pydantic>=2.7.0",
+  "httpx>=0.27.0",
 ]
 
 [project.scripts]
@@ -23,11 +24,14 @@ notion-synth = "notion_synth.cli:main"
 [project.optional-dependencies]
 dev = [
   "pytest>=8.0.0",
-  "httpx>=0.27.0",
   "ruff>=0.5.5",
   "mypy>=1.10.0",
   "bandit>=1.7.9",
   "pip-audit>=2.7.0",
+]
+
+llm = [
+  "openai>=1.0.0",
 ]
 
 [tool.setuptools.packages.find]
