--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ target-version = "py311"
 
 [tool.ruff.lint]
 select = ["E", "F", "B", "I", "UP", "SIM", "PL"]
-ignore = ["PLR0913", "PLR2004"]
+ignore = ["E501", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLR5501"]
 
 [tool.mypy]
 python_version = "3.11"
