ci: reduce checkout depth to mitigate transient fetch errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          # gitleaks scans git history ranges on push; shallow clones can make the commit range ambiguous.
-          fetch-depth: 0
+          # gitleaks scans git history ranges on push; depth=1 can make the commit range ambiguous.
+          # Avoid full-history fetches (depth=0) which are slower and can be more prone to transient fetch failures.
+          fetch-depth: 50
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
